--- a/index.html
+++ b/index.html
@@ -40,14 +40,9 @@ body {font-family: "Lato", sans-serif}
   <!-- The Band Section -->
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
     <h2 class="w3-wide">About Me</h2>
-    <p class="w3-opacity">My name is Tint Naing Htun.
-I studied at the Defense Services Academy from 2007 to 2010. On December 10, 2010, I graduated from the Defense Services Academy with a Bachelor's degree in Computer Science.
-After earning my Bachelor's degree, I pursued further studies for a Master's degree in Russia.
-I obtained my Master's degree from Saint Petersburg Marine Technical University, specializing in Web Development.
-After that, I continued self-learning as a freelancer through the internet.
-I primarily focus on server administration and Linux server administration.
-As for programming languages, I have studied Python and C#.
-Additionally, I have also learned web programming languages such as HTML, CSS, PHP, and JavaScript.</p>
+    <p>My name is Tint Naing Htun.I studied at the Defense Services Academy from 2007 to 2010. On December 10, 2010, I graduated from the Defense Services Academy with a Bachelor's degree in Computer Science.After earning my Bachelor's degree, I pursued further studies for a Master's degree in Russia.
+I obtained my Master's degree from Saint Petersburg Marine Technical University, specializing in Web Development.After that, I continued self-learning as a freelancer through the internet.I primarily focus on server administration and Linux server administration.
+As for programming languages, I have studied Python and C#.Additionally, I have also learned web programming languages such as HTML, CSS, PHP, and JavaScript.</p>
     <p class="w3-justify">Welcome From My Github Website</p>
     <h2 class="w3-wide w3-center">CONTACT</h2>
     <p class="w3-opacity w3-center"><i>Sent to me </i></p>
